[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures/SplashScreen/solid_off_black.png" type="Texture" id=1]
[ext_resource path="res://Fonts/ThaleahFat_TTF.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/PauseMenu/pause_menu.gd" type="Script" id=3]
[ext_resource path="res://Fonts/thaelahfat_pure_16x.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/SettingsMenu/settings_menu.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="ButtonGroup" id=2]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="UI" type="Control" parent="."]
anchor_bottom = 1.0
margin_right = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="UI"]
anchor_right = 0.25
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = 10.0
margin_bottom = -20.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "	"
}

[node name="Title" type="Label" parent="UI/Background"]
anchor_right = 1.0
anchor_bottom = 0.15
margin_left = 10.0
margin_top = 10.0
margin_right = 132.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "TITLE HERE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonVbox" type="VBoxContainer" parent="UI/Background"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 27
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="UI/Background/ButtonVbox"]
margin_right = 110.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 4 )
text = "Resume"

[node name="SettingsButton" type="Button" parent="UI/Background/ButtonVbox"]
margin_top = 48.0
margin_right = 110.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 4 )
text = "Settings"

[node name="MainMenuButton" type="Button" parent="UI/Background/ButtonVbox"]
margin_top = 96.0
margin_right = 110.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 4 )
text = "Main Menu"

[node name="ExitButton" type="Button" parent="UI/Background/ButtonVbox"]
margin_top = 144.0
margin_right = 110.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 4 )
text = "Exit"

[node name="SettingsMenu" parent="." instance=ExtResource( 5 )]

[node name="UI" parent="SettingsMenu" index="0"]
visible = false

[node name="OptionButton" parent="SettingsMenu/UI/GraphicsVbox/Quality" index="0"]
group = SubResource( 2 )

[connection signal="pressed" from="UI/Background/ButtonVbox/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="UI/Background/ButtonVbox/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="UI/Background/ButtonVbox/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="UI/Background/ButtonVbox/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="SettingsMenu/UI/BackButton" to="." method="_on_SettingsBackButton_pressed"]

[editable path="SettingsMenu"]
